--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <meta-data android:name="OnlineTraffic.Key" android:value="vHDsmWMtP8ZmTQrgDZarvt6WwqiBohae" />
         <meta-data android:name="OnlineSearch.Key" android:value="vHDsmWMtP8ZmTQrgDZarvt6WwqiBohae" />
         <meta-data android:name="OnlineRouting.Key" android:value="vHDsmWMtP8ZmTQrgDZarvt6WwqiBohae" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainDriver">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,5 +21,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
 </manifest>
